--- a/deployments/goopt.yml
+++ b/deployments/goopt.yml
@@ -1,33 +1,69 @@
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: goopt
+  labels:
+    type: local
+spec:
+  storageClassName: ""
+  capacity:
+    storage: 11Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: /goopt
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: goopt
+  namespace: default
+spec:
+  resources:
+    requests:
+      storage: 11Gi
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  volumeName: goopt
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/name: goopt
     app.kubernetes.io/component: goopt
-    app.kubernetes.io/version: 1.0
+    app.kubernetes.io/version: "1.0"
     statefulset.kubernetes.io/pod-name: goopt
   name: goopt
-  namespace: goopt-system
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: goopt
+      app.kubernetes.io/name: goopt
   template:
     metadata:
       labels:
         app.kubernetes.io/name: goopt
         app.kubernetes.io/component: goopt
-        app.kubernetes.io/version: 1.0
+        app.kubernetes.io/version: "1.0"
         statefulset.kubernetes.io/pod-name: goopt
     spec:
       serviceAccount: goopt
-      automountServiceAccountToken: false
+      automountServiceAccountToken: true
       containers:
         - name: goopt
-          image: achoistic98/goopt:latest
+          image: achoistic98/goopt:v0.0.1
           ports:
             - containerPort: 8080
+          volumeMounts:
+            - mountPath: /app
+              name: goopt
+      volumes:
+        - name: goopt
+          persistentVolumeClaim:
+            claimName: goopt
 ---
 apiVersion: v1
 kind: Service
@@ -35,8 +71,15 @@ metadata:
   name: goopt
 spec:
   selector:
-    app: goopt
+    app.kubernetes.io/name: goopt
   type: NodePort
   ports:
     - port: 8080
-      nodePort: 15103
+      nodePort: 32100
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: goopt
+# + ClusterRole
+# + ClusterRoleBinding
