--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ frontend/.env.production.local
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
+
+ci/jenkins*
+
+cmd/acvctl/acvctl/acvctl
+cmd/acvii/acvii
